--- a/css/smzf.html
+++ b/css/smzf.html
@@ -308,7 +308,7 @@
 		</section>
 
 		<footer>
-			&copy;聚焦新发明； 数据来源：网络； 制作人员:赵芳，张陈芳，杨盈
+			&copy;聚焦新发明； 数据来源：网络； 制作人员:杨盈,陈雨佳
 		</footer>
 	</body>
 </html>
