--- a/css/gt.html
+++ b/css/gt.html
@@ -253,7 +253,7 @@
 			</section>
 	<div class="div6">
 		<footer>
-			&copy;聚焦新发明； 数据来源：网络； 制作人员:杨盈,陈雨佳
+			&copy;聚焦新发明； 数据来源：网络； 
 		</footer>
 	</div>
 </body>
