--- a/css/wg.html
+++ b/css/wg.html
@@ -277,6 +277,6 @@ myChart.setOption(option);
 	</section>
 </body>
 <footer>
-	&copy;聚焦新发明； 数据来源：网络； 制作人员:杨盈,陈雨佳
+	&copy;聚焦新发明； 数据来源：网络； 
 </footer>
 </html>
